# aoc-2025

./: .gitignore  Cargo.toml  remove_inputs.ps1  tasks.py
benchmark/: Cargo.toml
benchmark/benches/: criterion.rs  iai.rs
day01/src/: lib.rs  main.rs
day02/: Cargo.toml
day02/src/: lib.rs  main.rs
day03/: Cargo.toml
day03/src/: lib.rs  main.rs
day04/: Cargo.toml
day04/src/: lib.rs  main.rs
day05/: Cargo.toml
day05/src/: lib.rs  main.rs
day06/src/: lib.rs  main.rs
day07/: Cargo.toml
day07/src/: lib.rs  main.rs
day08/: Cargo.toml
day08/src/: lib.rs  main.rs
day09/: .gitignore  Cargo.toml
day09/src/: lib.rs  main.rs
day10/: Cargo.toml  part2.py
day10/src/: lib.rs  main.rs
day11/: Cargo.toml
day11/src/: lib.rs  main.rs
day12/: example_solver.py
day12/src/: lib.rs  main.rs
