[workspace]
members = [ "benchmark", "day01", "day02", "day03", "day04", "day05", "day06", "day07", "day08", "day09", "day10" ]
resolver = "2"

[workspace.metadata.day01]
start_time = 2025-12-04T00:41:06.115475
completion_time = 2025-12-04T00:51:14.613630

[workspace.metadata.day02]
start_time = 2025-12-04T00:52:13.729650
completion_time = 2025-12-04T01:04:34.895194

[workspace.metadata.day03]
start_time = 2025-12-04T01:04:58.130985
completion_time = 2025-12-04T01:25:58.785545

[workspace.metadata.day04]
start_time = 2025-12-04T16:05:17.310676
completion_time = 2025-12-04T16:11:33.773328

[workspace.metadata.day05]
start_time = 2025-12-05T06:00:10.897344
completion_time = 2025-12-05T06:26:45.654321

[workspace.metadata.day06]
start_time = 2025-12-06T06:00:06.626615
completion_time = 2025-12-06T06:18:08.849296

[workspace.metadata.day07]
start_time = 2025-12-07T06:00:06.326490
completion_time = 2025-12-07T06:09:04.948852

[workspace.metadata.day08]
start_time = 2025-12-08T06:00:07.631466
completion_time = 2025-12-08T06:15:07.428096

[workspace.metadata.day09]
start_time = 2025-12-09T06:00:03.648197
completion_time = 2025-12-10T04:40:36.242806

[workspace.metadata.day10]
start_time = 2025-12-10T06:00:03.008458
completion_time = 2025-12-10T06:45:54.854691
