[package]
name = "aoc-benchmark"
version = "1.0.0"
authors = ["PurpleMyst <PurpleMyst@users.noreply.github.com>"]
edition = "2018"

[dependencies]
day01 = { version = "0.1.0", path = "../day01" }
day02 = { version = "0.1.0", path = "../day02" }
day03 = { version = "0.1.0", path = "../day03" }
day04 = { version = "0.1.0", path = "../day04" }
day05 = { version = "0.1.0", path = "../day05" }
day06 = { version = "0.1.0", path = "../day06" }

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
iai = "0.1"

[[bench]]
name = "criterion"
harness = false

[[bench]]
name = "iai"
harness = false

[lib]
bench = false

[features]
